# chat-portfolio

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
app/: load_portfolio_data.py  main.py  models.py
app/services/: pdf_loader.py  text_chunker.py  vector_store.py
backend/: .env.example  requirements.txt
backend/app/: config.py  database.py  load_pdf_resume.py  main.py
backend/app/data/: portfolio_data.txt
backend/app/routes/: chat.py
backend/app/services/: embeddings.py  openrouter.py  rag_pipeline.py
frontend/: .env.local.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: About.tsx  ChatWidget.tsx  Contact.tsx  Experience.tsx  Footer.tsx  Hero.tsx  HeroChat.tsx  HeroScene.tsx  Navbar.tsx  Projects.tsx  RevealOnScroll.tsx  ScrollBot.tsx  Skills.tsx
frontend/src/context/: ChatContext.tsx  ThemeContext.tsx
